feat: added spark funnel session bridge job